# kmeans

./: CMakeLists.txt  Point.h  functions.cpp  functions.h  input.txt  kmeans.h  main.cpp  output.txt
